# wcu-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
HAL/include/: HAL_BT.h  HAL_CPP_I2C.hpp  HAL_Debug.h  HAL_GPIO.h  HAL_I2C.h  HAL_Neopixels.h  HAL_Time.h
core-pico/: smartwindshield-bt.gatt
core-pico/include/: HAL_GPIO_pico.h
core-pico/src/: HAL_BT_pico.c  HAL_CPP_I2C_pico.cpp  HAL_Debug_pico.c  HAL_GPIO_pico.c  HAL_I2C_pico.c  HAL_Neopixels_pico.cpp  HAL_Time_pico.c  main.c
firmware/: smartwindshield-bt.gatt
firmware/include/: led_controller.h  solar.h  storage.h  util.h  wcu_firmware_config.h
firmware/include/comms/: bluetooth.h
firmware/include/sensors/: barometer.h  bluetooth.h  board.h  external_temp.h  gps.h  light.h  power_delivery.h  sensors_controller.h  vision.h
firmware/src/: led_controller.c  solar.c  storage.c
firmware/src/comms/: bluetooth.c
firmware/src/sensors/: barometer.c  external_temp.c  gps.c  gps.cpp  light.c  power_delivery.c  sensors_controller.c
